bat.bool1.sumdouble.SumDouble.scala.error
Erreur de compilation :
SumDouble:2: error: not found: value ax4
def sumDouble(a: Integer, b: Integer): Integer = {if (a!=b) {return a+b};else {return ax4}
                                                                                      ^